fix: files paths

--- a/src/content/second.html
+++ b/src/content/second.html
@@ -116,15 +116,14 @@
             <header class="article__nav">
                 <nav class="article__menu">
                     <ul class="article__list">
-                        <li class="article__item"><a class="article__link" href="#work">Organizacja nauki/pracy</a>
+                        <li class="article__item"><a class="article__link" href="#work">Organizacja</a>
                         </li>
-                        <li class="article__item"><a class="article__link" href="#html">HTML - znaczniki i
+                        <li class="article__item"><a class="article__link" href="#html">Znaczniki i
                                 atrybuty</a>
                         </li>
-                        <li class="article__item"><a class="article__link" href="#css">CSS - Sposoby stylowania</a>
+                        <li class="article__item"><a class="article__link" href="#css">Sposoby stylowania</a>
                         </li>
-                        <li class="article__item"><a class="article__link" href="#browser">Działanie
-                                przeglądarki</a>
+                        <li class="article__item"><a class="article__link" href="#browser">Przeglądarka</a>
                         </li>
                         <li class="article__item"><a class="article__link" href="#javaScript">JavaScript</a></li>
                         <li class="article__item"><a class="article__link" href="#terminal">Terminal</a></li>
@@ -158,7 +157,7 @@
                         zawierać
                         rzeczy
                         ukończone.</p>
-                    <img class="image" src="img/kanban.Small.webp" alt="tablica kanban">
+                    <img class="image" src="img/kanban-small.webp" alt="tablica kanban">
 
                 </section>
                 <section class="section" id="html">
@@ -252,10 +251,10 @@
                         jednak
                         najczęściej najlepszym
                         wyborem jest używanie stylów w osobnym pliku "style.css".</p>
-                    <img class="image" src="img/styleMarkup.webp" alt="przykład stylów w znaczniku style">
+                    <img class="image" src="img/style-markup.webp" alt="przykład stylów w znaczniku style">
                     <p class="section__paragraph section__paragraph--position">Style osadzone w zanczniku "style".
                     </p>
-                    <img class="image" src="img/styleFile.webp" alt="style umieszczone w osobnym pliku">
+                    <img class="image" src="img/style-file.webp" alt="style umieszczone w osobnym pliku">
                     <p class="section__paragraph section__paragraph--position">Style umieszczone w osobnym pliku.</p>
                     <section class="card">
                         <h4 class="card__header">Specyficzność</h4>
