--- a/src/content/sixth.html
+++ b/src/content/sixth.html
@@ -213,7 +213,7 @@
                     <p class="section__paragarph"><strong>@extend</strong> - przykład:</p>
                     <img src="img/extend.webp" alt="extend w sass" class="image">
                     <p class="section__paragarph"><strong>&</strong> - parent selector:</p>
-                    <img src="img/patentSelector.webp" alt="parent selector dla sass" class="image">
+                    <img src="img/parent-selector.webp" alt="parent selector dla sass" class="image">
                     <a class="section__link"
                         href="https://sass-lang.com/documentation">https://sass-lang.com/documentation</a>
                     <a class="section__link" href="https://www.sassmeister.com/">https://www.sassmeister.com/</a>
