--- a/src/content/third.html
+++ b/src/content/third.html
@@ -155,7 +155,7 @@
                     <p class="section__paragraph">Świat internetowych stron jest płaski, prawie cały. Można przyjąć, że
                         świat stron internetowych jest 2(.5) wymiarowy.
                     </p>
-                    <img class="image" src="img/boxModel.webp" alt="model pudełkowy">
+                    <img class="image" src="img/box-model.webp" alt="model pudełkowy">
                     <p class="section__paragraph">Box model jest to prostokąt, w którym umieszczona jest treść (obrazek,
                         tekst itd.). Treść ta może przybrać obojętnie jaki kształt, trójkąt, koło itd. niezależnie od
                         tego zawsze opisana jest w prostokącie. Ten prostokąt posiada własności: content (treść),
