feat: iframe style

--- a/src/content/eight.html
+++ b/src/content/eight.html
@@ -127,10 +127,19 @@
                     <p class="section__paragraph">Przejścia:</p>
                     <code class="section__code">transition: name duration timing-function delay
                     </code>
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/transition"
+                        class="section__link">https://developer.mozilla.org/en-US/docs/Web/CSS/transition</a>
+                    <div class="section__resp-container">
+                        <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/ttQDNroq3LA"
+                            allow="encrypted-media" allowfullscreen></iframe>
+                    </div>
                     <p class="section__paragaph"><strong>will-change: name</strong> - używamy tylko wtedy gdy mamy
                         problem z
                         wydajnością. Nie używamy bez potrzeby, staramy się nie używać tego rozwiązania.</p>
-                    <p class="section__paragraph">Nie animujemy właściwości <strong>top, right, bottom, left</strong>.
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/will-change"
+                        class="section__link">https://developer.mozilla.org/en-US/docs/Web/CSS/will-change</a>
+                    <p class="section__paragraph">Nie animujemy właściwości position <strong>top, right, bottom,
+                            left</strong>.
                         Do zmian stanu, pozycji elementu używamy <strong>transform</strong>.</p>
                     <code class="section__code">transform:rotate() <br>
                         transform:scale() <br>
