--- a/src/content/seventh.html
+++ b/src/content/seventh.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Notatnik frontendu</title>
+    <title>Notatnik frontendowca</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -108,7 +108,7 @@
     </nav>
     <main class="main">
         <header class="hero">
-            <h1 class="hero__header">Notatnik frontendu</h1>
+            <h1 class="hero__header">Notatnik frontendowca</h1>
         </header>
         <article class="article">
             <button class="article__button article__button--position" aria-label="otwórz menu sekcji"><span
