feat: Adds structure HTML/content to file eight.html

--- a/src/content/eight.html
+++ b/src/content/eight.html
@@ -117,6 +117,7 @@
                 <nav class="article__menu">
                     <ul class="article__list">
                         <li class="article__item"><a class="article__link" href="#animation">Animacje</a></li>
+                        <li class="article__item"><a class="article__link" href="#svg">SVG</a></li>
                     </ul>
                 </nav>
             </header>
@@ -168,6 +169,14 @@
                         class="section__link">https://developer.mozilla.org/en-US/docs/Web/CSS/animation</a>
                     <a href="https://www.youtube.com/watch?v=ZtRvBgVWogo" class="section__link">Zaawansowane animacje
                         CSS 😱 opowieści, skrypty #25</a>
+                </section>
+                <section class="section" id="svg">
+                    <h3 class="section__header">SVG - Scalable vector graphics (grafika wektorowa)</h3>
+                    <p class="section__paragraph"><strong>SVG</strong> - uniwersalny format dwuwymiarowej grafiki
+                        wektorowej który możemy stylować, animować za pomocą CSS.</p>
+                    <img src="img/clown-fish.svg" alt="Obrazek rybki w formacie SVG." class="image image--size">
+                    <p class="section__paragraph"><strong>Kod grafiki:</strong></p>
+                    <img src="img/fish-code.webp" alt="Kod grafiki wektorowej." class="image">
                 </section>
             </div>
         </article>
