adds 'Prism' - test

--- a/src/content/eight.html
+++ b/src/content/eight.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notatnik frontendowca</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/themes/prism-twilight.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -118,6 +119,7 @@
                     <ul class="article__list">
                         <li class="article__item"><a class="article__link" href="#animation">Animacje</a></li>
                         <li class="article__item"><a class="article__link" href="#svg">SVG</a></li>
+                        <li class="article__item"><a class="article__link" href="#head">head</a></li>
                     </ul>
                 </nav>
             </header>
@@ -178,12 +180,43 @@
                     <p class="section__paragraph"><strong>Kod grafiki:</strong></p>
                     <img src="img/fish-code.webp" alt="Kod grafiki wektorowej." class="image">
                 </section>
+                <section class="section" id="head">
+                    <h3 class="section__header">Head & OpenGraph</h3>
+                    <pre class="data-pre data-pre--white-space">
+                        <code class="language-html section__code">
+                        &lt;meta charset=&quot;UTF-8&quot; /&gt; - informacja o kodowaniu strony.
+                        &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot; /&gt; - informacja o wielkości viewportu na urządzeniach mobilnych. 
+                        &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;ie=edge&quot; /&gt; - dotyczy kompatybilności z przeglądarkami Microsoftu.
+                        &lt;title&gt;Site title&lt;/title&gt; - tytuł strony.
+                        &lt;meta name=&quot;description&quot; content=&quot;Description&quot; /&gt; - opis strony.
+                       
+                        &lt;!-- Title --&gt;
+                        &lt;meta property=&quot;og:title&quot; content=&quot;&quot; /&gt;
+                        &lt;!-- OPTIONAL description. 2-4 sentences. --&gt;
+                        &lt;meta property=&quot;og:description&quot; content=&quot;&quot; /&gt;
+                        &lt;!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ --&gt;
+                        &lt;meta property=&quot;og:url&quot; content=&quot;&quot; /&gt;
+                        &lt;!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. --&gt;
+                        &lt;meta property=&quot;og:image&quot; content=&quot;https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png&quot; /&gt;
+                        &lt;link rel=&quot;manifest&quot; href=&quot;manifest.json&quot;&gt;
+                        &lt;meta name=&quot;apple-mobile-web-app-capable&quot; content=&quot;yes&quot;&gt;
+                        &lt;link rel=&quot;apple-touch-icon&quot; sizes=&quot;192x192&quot; href=&quot;assets/pwa/icons/icon-192x192.png&quot;&gt;
+                        &lt;link rel=&quot;icon&quot; type=&quot;image/png&quot; href=&quot;assets/pwa/icons/icon-192x192.png&quot;&gt; - ikona strony.
+                    </code>
+                </pre>
+                </section>
             </div>
         </article>
     </main>
     <footer class="footer">
         <p class="footer__paragraph">Projekt stworzony przez Andrzeja</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/components/prism-core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/plugins/autoloader/prism-autoloader.min.js">
+    </script>
+    <script>
+        Prism.plugins.autoloader.languages_path = 'https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/components/'
+    </script>
     <script src="js/main.js"></script>
 </body>
 
