--- a/src/content/fifth.html
+++ b/src/content/fifth.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notatnik frontendowca</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/themes/prism-twilight.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -294,6 +295,12 @@
     <footer class="footer">
         <p class="footer__paragraph">Projekt stworzony przez Andrzeja</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/components/prism-core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/plugins/autoloader/prism-autoloader.min.js">
+    </script>
+    <script>
+        Prism.plugins.autoloader.languages_path = 'https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/components/'
+    </script>
     <script src="js/main.js"></script>
 </body>
 
