feat: Adds structure HTML/content to file eight.html

--- a/src/content/eight.html
+++ b/src/content/eight.html
@@ -120,6 +120,7 @@
                         <li class="article__item"><a class="article__link" href="#animation">Animacje</a></li>
                         <li class="article__item"><a class="article__link" href="#svg">SVG</a></li>
                         <li class="article__item"><a class="article__link" href="#head">head</a></li>
+                        <li class="article__item"><a class="article__link" href="#wcag">WCAG</a></li>
                     </ul>
                 </nav>
             </header>
@@ -213,6 +214,32 @@
                     <a href="http://ogp.me/" class="section__link">http://ogp.me/</a>
                     <a href="https://developers.facebook.com/tools/debug/"
                         class="section__link">https://developers.facebook.com/tools/debug/</a>
+                </section>
+                <section class="section" id="wcag">
+                    <h3 class="section__header">WCAG</h3>
+                    <p class="section__paragraph"><strong>WAI</strong> - Web Accessibility Initiative jest organizacją
+                        zajmującą się wytycznymi dotyczących tworzenia dostępnych serwisów internetowych.</p>
+                    <section class="card">
+                        <h4 class="card__header">Porady</h4>
+                        <ul>
+                            <li>Pisz semantycznie.</li>
+                            <li>Trzymaj kontrast.</li>
+                            <li>Odpowiednio dobieraj kolory.</li>
+                            <li>Unikaj autoplay</li>
+                            <li>Nie ograniczaj rzeczy czasowo.</li>
+                            <li>Nie usuwaj ':focus'.</li>
+                            <li>Używaj alt i kończ opisy kropką.</li>
+                            <li>Używaj ARIA (głównie przy aplikacjach)</li>
+                        </ul>
+                    </section>
+                    <a href="https://www.w3.org/WAI/WCAG21/quickref/"
+                        class="section__link">https://www.w3.org/WAI/WCAG21/quickref/</a>
+                    <a href="http://widzialni.org/" class="section__link">http://widzialni.org/</a>
+                    <a href="https://color.a11y.com/Contrast/"
+                        class="section__link">https://color.a11y.com/Contrast/</a>
+                    <a href="http://colorsafe.co/" class="section__link">http://colorsafe.co/</a>
+                    <a href="https://www.w3.org/WAI/standards-guidelines/aria/"
+                        class="section__link">https://www.w3.org/WAI/standards-guidelines/aria/</a>
                 </section>
             </div>
         </article>
