--- a/src/content/third.html
+++ b/src/content/third.html
@@ -97,7 +97,16 @@
                     </ul>
                 </a></li>
             <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong></a></li>
+                        tydzień</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Przejścia</li>
+                        <li class="menu__item">Animacje</li>
+                        <li class="menu__item">SVG</li>
+                        <li class="menu__item">Head</li>
+                        <li class="menu__item">WCAG</li>
+                        <li class="menu__item">PWA</li>
+                    </ul>
+                </a></li>
             <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
                         tydzień</strong></a></li>
             <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
