--- a/fifthWeek.html
+++ b/fifthWeek.html
@@ -14,7 +14,7 @@
             class="menuButton__line menuButton__line--js">|</span></button>
     <nav class="menu">
         <section class="menu__section">
-            <h2 class="menu__header">Co to za miejsce?</h2>
+            <h2 class="menu__header">O czym jest ta strona</h2>
             <p class="menu__text">Podczas jakiejkolwiek nauki każdy z nas
                 robi notatki. Jako że obecnie uczę się programowania webowego, również postanowiłem notować, jednak w
                 formie cyfrowej. Takim sposobem szybciej zapamiętuję oraz utrwalam nową wiedzę. Dodatkowym atutem
