--- a/fifth.html
+++ b/fifth.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Notatnik frontendu</title>
+    <title>Notatnik frontendowca</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/themes/prism-twilight.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -97,7 +98,16 @@
                     </ul>
                 </a></li>
             <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong></a></li>
+                        tydzień</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Przejścia</li>
+                        <li class="menu__item">Animacje</li>
+                        <li class="menu__item">SVG</li>
+                        <li class="menu__item">Head</li>
+                        <li class="menu__item">WCAG</li>
+                        <li class="menu__item">PWA</li>
+                    </ul>
+                </a></li>
             <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
                         tydzień</strong></a></li>
             <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
@@ -108,7 +118,7 @@
     </nav>
     <main class="main">
         <header class="hero">
-            <h1 class="hero__header">Notatnik frontendu</h1>
+            <h1 class="hero__header">Notatnik frontendowca</h1>
         </header>
         <article class="article">
             <button class="article__button article__button--position" aria-label="otwórz menu sekcji"><span
@@ -294,6 +304,12 @@
     <footer class="footer">
         <p class="footer__paragraph">Projekt stworzony przez Andrzeja</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/components/prism-core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/plugins/autoloader/prism-autoloader.min.js">
+    </script>
+    <script>
+        Prism.plugins.autoloader.languages_path = 'https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/components/'
+    </script>
     <script src="js/main.js"></script>
 </body>
 
