--- a/seventhWeek.html
+++ b/seventhWeek.html
@@ -14,7 +14,7 @@
             class="menuButton__line menuButton__line--js">|</span></button>
     <nav class="menu">
         <section class="menu__section">
-            <h2 class="menu__header">Co to za miejsce?</h2>
+            <h2 class="menu__header">O czym jest ta strona</h2>
             <p class="menu__text">Podczas jakiejkolwiek nauki każdy z nas
                 robi notatki. Jako że obecnie uczę się programowania webowego, również postanowiłem notować, jednak w
                 formie cyfrowej. Takim sposobem szybciej zapamiętuję oraz utrwalam nową wiedzę. Dodatkowym atutem
@@ -110,9 +110,6 @@
                         <li class="article__item"><a class="article__link" href="#gfonts">Google fonts</a></li>
                         <li class="article__item"><a class="article__link" href="#branche">Branche</a></li>
                         <li class="article__item"><a class="article__link" href="#markdown">Markdown</a></li>
-                        <li class="article__item"><a class="article__link" href="#arrays">Tablice</a></li>
-                        <li class="article__item"><a class="article__link" href="#loops">Pętle</a></li>
-                        <li class="article__item"><a class="article__link" href="#data">Dane</a></li>
                     </ul>
                 </nav>
             </header>
@@ -152,7 +149,7 @@
                         <code class="card__code">
                             &lt;style&gt; <br>
                             @import
-                            url('https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap&subset=latin-ext');p
+                            url('https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap&subset=latin-ext');
                             <br>
                             &lt;/style&gt;
                         </code>
@@ -215,138 +212,6 @@
                         <br> &nbsp;&nbsp;&nbsp;&nbsp;1. sublista<br> &nbsp;&nbsp;&nbsp;&nbsp;2. sublista <br>
                         &nbsp;&nbsp;&nbsp;&nbsp;3. sublista <br> <br>
                         Cztery spacje tworzą sublistę.</code>
-                </section>
-                <section class="section" id="arrays">
-                    <h3 class="section__header">JS: tablice</h3>
-                    <p class="section__paragraph">Tablica jest strukturą danych.</p>
-                    <p class="section__paragraph">Index - liczymy od zera.</p>
-                    <p class="section__paragraph">Tablice mogą zawierać różnego typu dane jak stringi, obiekty, liczby
-                        itd.</p>
-                    <code class="section__code">const hardware = ['keyboard', 'mouse', 'screen'] <br>
-                        const news = [ <br>
-                        { title: 'digi-chip', <br>
-                        content: 'lorem ipsum...' <br>
-                        }, <br>
-                        { title: 'technologia', <br>
-                        content: 'lorem ipsum...', <br>
-                        link: 'https://digi-chip.pl' <br>
-                        },
-                        8, true
-                        ]
-                    </code>
-                    <p class="section__paragraph">Pobieranie elementu na danym miejscu.</p>
-                    <code class="section__code">tablica[index]</code>
-                    <p class="section__paragraph"><strong>tablica.length</strong> - długość tablicy</p>
-                    <p class="section__paragraph"><strong>tablica.push(element)</strong> - dodanie elementu na koniec
-                        tablicy</p>
-                    <p class="section__paragraph"><strong>tablica.unshift(element)</strong> - dodanie elementu na
-                        początku tablicy</p>
-                    <p class="section__paragraph"><strong>tablica.shift()</strong> - usuwa element na początku tablicy
-                    </p>
-                    <p class="section__paragraph"><strong>tablica.pop()</strong> - usuwa element na końcu tablicy</p>
-                    <p class="section__paragraph"><strong>tablica.indexOf(element)</strong> - sprawdzanie czy jest
-                        element w tablicy, zwraca numer indeksu</p>
-                    <p class="section__paragraph"><strong>tablica.splice(index, liczbaElementów)</strong> - usuwanie n
-                        elementów od danej poycji</p>
-                    <p class="section__paragraph"><strong>tablica.slice(index, stop)</strong> - pobieranie n elementów
-                        od danej pozycji</p>
-                </section>
-                <section class="section" id="loops">
-                    <h3 class="section__header">JS: pętle</h3>
-                    <p class="section__paragraph"><strong>pętla for:</strong></p>
-                    <code class="section__code">for (inicjalizacja; warunek stopu; wyrażenie inkrementacji) { <br>
-                        kod <br>
-                        }
-                    </code>
-                    <p class="section__paragraph"><strong>i</strong> - licznik pętli</p>
-                    <code class="section__code">for (let i = 0; i &lt; 3; i++) { <br>
-                        console.log(`${i} wykonanie pętli`); <br>
-                        }
-                    </code>
-                    <p class="section__paragraph"><strong>i++</strong> - postinkrementacja</p>
-                    <p class="section__paragraph"><strong>i--</strong> - postdekrementacja</p>
-                    <p class="section__paragraph"><strong>++i</strong> - preinkrementacja</p>
-                    <p class="section__paragraph"><strong>--i</strong> - predekrementacja</p>
-                    <p class="section__paragraph"><strong>pętla while:</strong></p>
-                    <code class="section__code">while (warunek logiczny) { <br>
-                        kod <br>
-                        }
-                    </code>
-                    <p class="section__paragraph"> przykład:</p>
-                    <code class="section__code">let n = 3; <br> <br>
-                        while (n &lt; 9) { <br>
-                        console.log(n); <br>
-                        n = n + 3; <br>
-                        } <br> <br>
-                        console.log(n);
-                    </code>
-                    <p class="section__paragraph"><strong>pętla do while:</strong></p>
-                    <code class="section__code">do { <br>
-                        kod <br>
-                        } while (warunek logiczny) <br>
-                    </code>
-                    <p class="section__paragraph">przykład:</p>
-                    <code class="section__code">let n = 9; <br> <br>
-                        do { <br>
-                        console.log(n); <br>
-                        n = n + 3; <br>
-                        } while (n &lt; 9); <br> <br>
-                        console.log(n); <br> <br>
-                        blok kodu pierwszy raz zawsze się wykona
-                    </code>
-                    <p class="section__paragraph"><strong>pętla for in:</strong></p>
-                    <p class="section__paragraph">Pętla <strong>for in</strong> wykorzystujemy głównie do wypisywania
-                        obiektów.</p>
-                    <code class="section__code">for (wlasnosc in obiekt)</code>
-                    <p class="section__paragraph">przyklad:</p>
-                    <code class="section__code">const person = { <br>
-                        name: 'maciek', <br>
-                        age: 31 <br>
-                        } <br><br>
-                        for (let property in person) { <br>
-                        console.log(`${property}: ${person[property]}`); <br>
-                        }
-                    </code>
-                    <p class="section__paragraph"><strong>pętla for of:</strong></p>
-                    <code class="section__code">for (element of tablica)</code>
-                    <p class="section__paragraph">przykład:</p>
-                    <code class="section__code">const faces = ['😎', '🤯', '😱']; <br> <br>
-                        for (let face of faces) { <br>
-                        console.log(face); <br>
-                        }
-                    </code>
-                </section>
-                <section class="section" id="data">
-                    <h3 class="section__header">JS: Przechowywanie danych</h3>
-                    <p class="section__paragarph"><strong>document.cookie</strong> - pobranie ciastka</p>
-                    <p class="section__paragarph"><strong>document.cookie = "nazwa = wartość"</strong> - dodanie ciastka
-                    </p>
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document/cookie
-                    " class="section__link">https://developer.mozilla.org/en-US/docs/Web/API/Document/cookie</a>
-                    <p class="section__paragarph"><strong>Local / session storage:</strong></p>
-                    <p class="section__paragarph">Localstorage - trwa do ręcznego wyczyszczenia (trwalsze).</p>
-                    <p class="section__paragarph">Sessionstorage - trwa do zamknięcia sesji (zakładki przeglądarki).</p>
-                    <section class="card">
-                        <h4 class="card__header">Zastosowanie</h4>
-                        <p class="card__paragraph">Dodaje klucz i wartość, ustawia wartości w localstorage.</p>
-                        <code class="card__code">localStorage.setItem('nazwa', wartosc)</code>
-                        <p class="card__paragraph">Pobieranie danych.</p>
-                        <code class="card__code">localStorage.getItem('nazwa')</code>
-                        <p class="card__paragraph">Usuwanie danych.</p>
-                        <code class="card__code">localStorage.removeItem('nazwa')</code>
-                        <p class="card__paragraph">Dodawanie obiektów.</p>
-                        <code class="card__code">const person = { <br> name: 'Andrzej', <br> age = 35 <br>} <br> <br>
-                            const jsonPerson = JSON.stingify(person); <br><br> localStorage.setItem('person',
-                            jsonPerson);</code>
-                        <p class="card__paragraph">Pobieranie obiektów.</p>
-                        <code class="card__code">const personStringify = localStorage.getItem('person'); <br><br> const
-                            newPerson = JSON.parse(personStringify);
-                        </code>
-                        <p class="card__paragraph">Konwersja obiektu na string.</p>
-                        <code class="card__code">JSON.stringify(obiekt)</code>
-                        <p class="card__paragraph">Konwersja string na obiekt.</p>
-                        <code class="card__code">JSON.parse(JSONString)</code>
-                    </section>
                 </section>
             </div>
         </article>
