feat: Adds structure HTML/content

--- a/src/content/ninth.html
+++ b/src/content/ninth.html
@@ -247,8 +247,20 @@
                 </section>
                 <section class="section" id="typography">
                     <h3 class="section__header">Typografia, jednostki</h3>
-                    <p class="section__paragraph"><strong>Hoisting</strong> - to przenoszenie deklaracji funkcji i
-
+                    <p class="section__paragraph"><strong>font-size</strong> - właściwość odpowiadająca za rozmiar
+                        fontu, jest dziedziczony.</p>
+                    <p class="section__paragraph"><strong>font-family</strong> - odpowiada za krój fontu.</p>
+                    <p class="section__paragraph"><strong>font-weight</strong> - grubość fontu.</p>
+                    <p class="section__paragraph"><strong>line-height</strong> - wysokość wiersza w elemencie.</p>
+                    <p class="section__paragraph"><strong>letter-spacing</strong> - odległość między znakami.</p>
+                    <p class="section__paragraph"><strong>em</strong> - 1 em = font-size dla elementu (dziedziczony /
+                        ustawiony) * 1.</p>
+                    <p class="section__paragraph"><strong>rem</strong> - 1 rem = font-size dla root elementu * 1.</p>
+                    <p class="section__paragraph"><strong>font-size</strong> - </p>
+                    <p class="section__paragraph wrong">Nie każda przeglądarka ma domyślnie ustawione font-size na 16px!
+                        Zaleca się zostawienie font-size domyślnego lub ustawienie na 16px.</p>
+                    <a href="https://offroadcode.com/rem-calculator"
+                        class="section__link">https://offroadcode.com/rem-calculator</a>
                 </section>
             </div>
         </article>
