--- a/src/content/third.html
+++ b/src/content/third.html
@@ -158,6 +158,7 @@
                             <li>git push - wysłanie stanu repozytorium na serwer, synchronizowanie projektu</li>
                         </ul>
                     </section>
+                    <a href="https://gitexplorer.com/" class="section__link">https://gitexplorer.com/</a>
                 </section>
                 <section class="section" id="box">
                     <h3 class="section__header">BOX MODEL</h3>
