feat: Adds structure HTML/content

--- a/src/content/ninth.html
+++ b/src/content/ninth.html
@@ -108,7 +108,14 @@
                     </ul>
                 </a></li>
             <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
-                        tydzień</strong></a></li>
+                        tydzień</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">API</li>
+                        <li class="menu__item">CSS</li>
+                        <li class="menu__item">JS</li>
+                        <li class="menu__item">Typografia</li>
+                    </ul>
+                </a></li>
             <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
                         tydzień</strong></a></li>
             <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
