--- a/src/content/ninth.html
+++ b/src/content/ninth.html
@@ -117,7 +117,13 @@
                     </ul>
                 </a></li>
             <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
-                        tydzień</strong></a></li>
+                        tydzień</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Multimedia</li>
+                        <li class="menu__item">Bootstrap</li>
+                        <li class="menu__item">Kombinatory</li>
+                    </ul>
+                </a></li>
             <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
                         tydzień</strong></a></li>
         </ul>
